--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.4"
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^8.4.4",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
+    "openai": "^4.52.4"
   }
 }
